fix the problem with z-index

--- a/src/js/blocks/autoFind/components/autoFind.less
+++ b/src/js/blocks/autoFind/components/autoFind.less
@@ -394,7 +394,7 @@
         .jdn__collapse-panel {
           .ant-collapse-header {
             position: sticky;
-            z-index: 10000;
+            z-index: 2;
             border-bottom: 1px solid @locators-list-item-border;
           }
 
